--- a/default_params.yml
+++ b/default_params.yml
@@ -3,6 +3,13 @@ path:
   processed_path: ./data/processed/
   file_path: ./research/files/
 
+model:
+  beta1: 0.5
+  beta2: 0.999
+  momentum: 0.90
+  step_size: 10
+  gamma: 0.5
+
 
 
 
