--- a/default_params.yml
+++ b/default_params.yml
@@ -2,6 +2,8 @@ path:
   raw_path: ./data/raw/
   processed_path: ./data/processed/
   file_path: ./research/files/
+  train_models: ./checkpoints/train_models/
+  best_model: ./checkpoints/best_models/
 
 model:
   beta1: 0.5
